--- a/main.html
+++ b/main.html
@@ -10968,7 +10968,7 @@
                               class="et_pb_social_media_follow_network_1_tb_footer et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_1_tb_footer"
                             >
                               <a
-                                href="#"
+                                href="https://www.facebook.com/profile.php?id=61562606288232"
                                 class="icon et_pb_with_border ds-iparty-icon brands"
                                 title="Follow on Facebook"
                                 target="_blank"
@@ -11106,7 +11106,7 @@
                               class="et_pb_social_media_follow_network_7_tb_footer et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_7_tb_footer"
                             >
                               <a
-                                href="#"
+                                href="https://www.facebook.com/profile.php?id=61562606288232"
                                 class="icon et_pb_with_border ds-iparty-icon brands"
                                 title="Follow on Facebook"
                                 target="_blank"
