--- a/About.html
+++ b/About.html
@@ -12183,7 +12183,7 @@
                             class="et_pb_social_media_follow_network_1_tb_footer et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_1_tb_footer"
                           >
                             <a
-                              href="#"
+                              href="https://www.facebook.com/profile.php?id=61562606288232"
                               class="icon et_pb_with_border ds-iparty-icon brands"
                               title="Follow on Facebook"
                               target="_blank"
@@ -12321,7 +12321,7 @@
                             class="et_pb_social_media_follow_network_7_tb_footer et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_7_tb_footer"
                           >
                             <a
-                              href="#"
+                              href="https://www.facebook.com/profile.php?id=61562606288232"
                               class="icon et_pb_with_border ds-iparty-icon brands"
                               title="Follow on Facebook"
                               target="_blank"
