--- a/index.html
+++ b/index.html
@@ -10306,7 +10306,7 @@ window.addEventListener('scroll', function() {
                                 <div class="et_pb_slide_content">
                                   <div class="elevated">
                                     <p>
-                                      <strong>EN</strong><span class="line"></span>DECOR
+                                      <strong>EN</strong><span class="line md:mt-3"></span>DECOR
                                     </p>
                                   </div>
                                   <p class="py-5 shadow-2xl bg-[#62626263] " style="padding-bottom: 1.5rem !important;">
@@ -11169,7 +11169,7 @@ keenSliderNext.addEventListener('click', () => keenSlider.next())
                       <div class="et_pb_module_inner">
                         <li
                           class="et_pb_social_media_follow_network_1_tb_footer et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_1_tb_footer">
-                          <a href="#" class="icon et_pb_with_border ds-iparty-icon brands" title="Follow on Facebook"
+                          <a href="https://www.facebook.com/profile.php?id=61562606288232" class="icon et_pb_with_border ds-iparty-icon brands" title="Follow on Facebook"
                             target="_blank"><span class="et_pb_social_media_follow_network_name"
                               aria-hidden="true">Follow</span></a>
                         </li>
@@ -11245,7 +11245,7 @@ keenSliderNext.addEventListener('click', () => keenSlider.next())
                       <div class="et_pb_module_inner">
                         <li
                           class="et_pb_social_media_follow_network_7_tb_footer et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_7_tb_footer">
-                          <a href="#" class="icon et_pb_with_border ds-iparty-icon brands" title="Follow on Facebook"
+                          <a href="https://www.facebook.com/profile.php?id=61562606288232" class="icon et_pb_with_border ds-iparty-icon brands" title="Follow on Facebook"
                             target="_blank"><span class="et_pb_social_media_follow_network_name"
                               aria-hidden="true">Follow</span></a>
                         </li>
