--- a/index.html
+++ b/index.html
@@ -9806,7 +9806,7 @@
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
 
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> -->
   <style>
     .social-icons a {
       margin: 0 10px;
@@ -9849,99 +9849,52 @@
 </div>
 
 
-<!-- Modal popup -->
-<div
-  style="z-index: 99999 !important;"
-  class="modal fade md:mt-5"
+<!-- Modal Popup -->
+<div style="z-index: 999999 !important;"
   id="consultationModal"
-  tabindex="-1"
-  aria-labelledby="modalLabel"
-  aria-hidden="true"
+  class="fixed inset-0 hidden items-center justify-center bg-black bg-opacity-50"
 >
-  <div class="modal-dialog modal-dialog-centered">
-    <div
-      class="modal-content text-dark"
-      style="
-        background-color: #CE9C49;
-        border: none;
-        border-radius: 15px;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-        position: relative;
-        overflow: hidden;
-      "
+  <div
+    class="bg-[#CE9C49] text-black rounded-xl shadow-lg overflow-hidden relative w-[90%] max-w-md"
+  >
+    <!-- Close Button -->
+    <button
+      id="closeModal"
+      class="absolute top-4 right-4 text-lg font-bold text-black hover:text-red-500"
     >
-      <!-- Modal Body -->
-      <div class="modal-body text-center" style="position: relative;">
-        <!-- Close Button -->
+      &times;
+    </button>
+
+    <!-- Modal Content -->
+    <div class="p-6 text-center">
+      <!-- Heading -->
+      <h2 class="text-xl font-bold uppercase">
+        Book A Free <span class="text-[#f15a22]">Consultation</span>
+      </h2>
+
+      <!-- Sofa Image -->
+      <img
+        src="./assets/sofaPopup.png"
+        alt="Sofa"
+        class="h-44 md:h-60 mx-auto rounded-lg object-cover my-4"
+      />
+
+      <!-- Email Input and Button -->
+      <div class="flex flex-col md:flex-row items-center gap-4 mt-4">
+        <!-- Email Input -->
+        <input style="padding: 10px;"
+        type="email"
+        placeholder="Your email"
+        class="w-full border-2 border-[#f15a22] rounded-full text-center focus:outline-none focus:ring-2 focus:ring-[#f15a22] focus:ring-opacity-50 placeholder-gray-500"
+       />
+      
+
+        <!-- Submit Button -->
         <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-          style="
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background-color: transparent;
-            border: none;
-            font-size: 1.5rem;
-            color: #333;
-          "
-        ></button>
-
-        <!-- Modal Heading -->
-        <h2
-          class="mb-4"
-          style="font-size: 24px; font-weight: bold; text-transform: uppercase; color: black;"
+          class="w-full md:w-auto px-6 py-3 bg-[#f15a22] text-white font-bold rounded-full hover:bg-[#e0521e] transition duration-200"
         >
-          Book A Free <span style="color: #f15a22;">Consultation</span>
-        </h2>
-
-        
-        <!-- Input and Button Section -->
-        <div
-        class="row g-3 align-items-center justify-content-center"
-        style="margin-top: 20px;"
-        >
-        <!-- Sofa Image -->
-        <img
-          src="./assets/sofaPopup.png"
-          alt="Sofa Image"
-          class="h-[11rem]  md:h-[15rem] mx-auto rounded-lg object-cover transform group-hover:scale-105 transition duration-300 ease-in-out mb-4"
-        />
-          <!-- Email Input -->
-          <div class="col-12 col-md-6">
-            <input
-              type="email"
-              placeholder="Your email"
-              class="form-control"
-              style="
-                padding: 10px 15px;
-                border-radius: 25px;
-                border: 2px solid #f15a22;
-                text-align: center;
-              "
-            />
-          </div>
-          <!-- Submit Button -->
-          <div class="col-12 col-md-4">
-            <button
-              type="button"
-              class="btn w-100"
-              style="
-                background-color: #f15a22;
-                color: white;
-                font-weight: bold;
-                padding: 10px 20px;
-                border-radius: 25px;
-                border: none;
-              "
-            >
-              Submit
-            </button>
-          </div>
-
-        </div>
+          Submit
+        </button>
       </div>
     </div>
   </div>
@@ -9949,23 +9902,30 @@
 
 
 
+<!-- JavaScript -->
+<script>
+  // Show the modal after 10 seconds
+  setTimeout(() => {
+    const modal = document.getElementById("consultationModal");
+    modal.classList.remove("hidden");
+    modal.classList.add("flex");
+  }, 1000); 
 
-  
-   
+  // Close the modal when the close button is clicked
+  document.getElementById("closeModal").addEventListener("click", () => {
+    const modal = document.getElementById("consultationModal");
+    modal.classList.add("hidden");
+  });
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Bootstrap Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <!-- Auto Popup Script -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      setTimeout(function () {
-        var myModal = new bootstrap.Modal(document.getElementById('consultationModal'));
-        myModal.show();
-      }, 10000); // 10 seconds
-    });
-  </script>
+  // Close modal when clicking outside the modal
+  window.addEventListener("click", (e) => {
+    const modal = document.getElementById("consultationModal");
+    if (e.target === modal) {
+      modal.classList.add("hidden");
+    }
+  });
+</script>
+
 
     <div id="dm_nav" class="menu-wrap menuclosed">
       <div class="menu-wrap__inner">
@@ -10957,32 +10917,79 @@ keenSliderNext.addEventListener('click', () => keenSlider.next())
       <div class="swiper-wrapper">
         <!-- Slide 1 -->
         <div class="swiper-slide flex justify-center">
-          <i class="fab fa-apple text-6xl text-gray-600"></i>
+          <!-- <i class="fab fa-apple text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/Brakout.jpeg" alt="">
         </div>
         <!-- Slide 2 -->
         <div class="swiper-slide flex justify-center">
-          <i class="fab fa-google text-6xl text-gray-600"></i>
+          <!-- <i class="fab fa-google text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/Workstation area-1.jpeg" alt="">
+
         </div>
         <!-- Slide 3 -->
         <div class="swiper-slide flex justify-center">
-          <i class="fab fa-amazon text-6xl text-gray-600"></i>
+          <!-- <i class="fab fa-amazon text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/HR Cabin.jpeg" alt="">
+
         </div>
         <!-- Slide 4 -->
         <div class="swiper-slide flex justify-center">
-          <i class="fab fa-microsoft text-6xl text-gray-600"></i>
+          <!-- <i class="fab fa-microsoft text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/Meeting room.jpeg" alt="">
+
         </div>
         <!-- Slide 5 -->
         <div class="swiper-slide flex justify-center">
-          <i class="fab fa-facebook text-6xl text-gray-600"></i>
+          <!-- <i class="fab fa-facebook text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/cafeteria 2 (1).jpg" alt="">
+
         </div>
         <!-- Slide 6 -->
         <div class="swiper-slide flex justify-center">
-          <i class="fab fa-twitter text-6xl text-gray-600"></i>
+          <!-- <i class="fab fa-twitter text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/CEO-1.jpeg" alt="">
+
+        </div>
+        <!-- Slide 7 -->
+        <div class="swiper-slide flex justify-center">
+          <!-- <i class="fab fa-twitter text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/reception-2.jpeg" alt="">
+
+        </div>
+        <!-- Slide 8 -->
+        <div class="swiper-slide flex justify-center">
+          <!-- <i class="fab fa-twitter text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/Conference room.jpeg" alt="">
+
+        </div>
+        <!-- Slide 9 -->
+        <div class="swiper-slide flex justify-center">
+          <!-- <i class="fab fa-twitter text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/Director cabin-2.jpeg" alt="">
+
+        </div>
+        <!-- Slide 10 -->
+        <div class="swiper-slide flex justify-center">
+          <!-- <i class="fab fa-twitter text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/Workstation-2.jpeg" alt="">
+
+        </div>
+        <!-- Slide 11 -->
+        <div class="swiper-slide flex justify-center">
+          <!-- <i class="fab fa-twitter text-6xl text-gray-600"></i> -->
+          <img src="./assets/happyClients/Director cabin.jpeg" alt="">
+
         </div>
         <!-- Add more slides as needed -->
       </div>
     </div>
   </div>
+  <style>
+    .swiper-slide img{
+      border-radius: 10px;
+      height: 12rem !important;
+    }
+  </style>
 </section>
 
 <!-- SwiperJS CSS & Script -->
