change in services page

--- a/index.html
+++ b/index.html
@@ -10445,7 +10445,7 @@ window.addEventListener('scroll', function() {
                                     Your inspiration, our expertise. Welcome to a world of exceptional design.
                                   </p> -->
                                   <p class="py-5 shadow-2xl bg-[#62626263] " style="padding-bottom: 1.5rem !important;">
-                                    En-décor Interiors believes in “Transforming Spaces and Elevating Lives
+                                    En-décor Interiors believes in Transforming Spaces and Elevating Lives
                                   </p>
                                   <p>&nbsp;</p>
                                   <p style="padding-right: 4px; animation: bounce 1s infinite;"
@@ -10494,7 +10494,7 @@ window.addEventListener('scroll', function() {
                   <div id="endecor" class="et_pb_section et_pb_section_9 et_section_regular">
                     
                     <h1 class="text-xl sm:text-2xl md:text-4xl md:px-16 font-extrabold text-center text-[#cd5225] pt-5 uppercase tracking-wide">
-                      Bringing Your Vision to Life with a 60-Day Project Delivery Guarantee
+                      Bringing Your Vision to Life with a 60-Day Project Delivery Guarantee*
                     </h1>
                     
                     <div class="et_pb_row et_pb_row_4 et_pb_equal_columns et_pb_gutters1">
