--- a/services.html
+++ b/services.html
@@ -10437,14 +10437,14 @@ window.addEventListener('scroll', function() {
 
 <!-- out sevices images start -->
 
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-5">
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-5 items-center justify-center">
   <!-- Turnkey Solutions -->
   <div class="relative group overflow-hidden rounded-lg shadow-lg hover:shadow-lg hover:shadow-[#cd5225]">
     <img src="./assets/servicePage/TurnkeySolutions.jpg" alt="Turnkey Solutions" 
          class="w-full h-[300px] object-cover transform group-hover:scale-110 transition duration-500 ease-in-out">
-    <div class="absolute inset-0 bg-black bg-opacity-60 opacity-0 group-hover:opacity-100 flex flex-col justify-center items-center text-white transition duration-500 ease-in-out">
+    <div class="absolute inset-0 bg-black bg-opacity-60 opacity-0 group-hover:opacity-100 flex flex-col justify-center items-center text-white transition duration-500 ease-in-out text-center">
       <h3 class="text-xl font-bold mb-2 text-white sm:text-2xl">Turnkey Solutions</h3>
-      <p class="text-sm text-white">Comprehensive project management from concept to completion.</p>
+      <p class="text-sm text-white text-center">Comprehensive project management from concept to completion.</p>
     </div>
   </div>
 
@@ -10529,12 +10529,15 @@ window.addEventListener('scroll', function() {
   </div>
 
   <!-- Commercial -->
-  <div class="relative group overflow-hidden rounded-lg shadow-lg hover:shadow-lg hover:shadow-[#cd5225]">
-    <img src="./assets/servicePage/Commercial.jpeg" alt="Commercial" 
-         class="w-full h-[300px] object-cover transform group-hover:scale-110 transition duration-500 ease-in-out">
-    <div class="absolute inset-0 bg-black bg-opacity-60 opacity-0 group-hover:opacity-100 flex flex-col justify-center items-center text-white transition duration-500 ease-in-out">
-      <h3 class="text-xl font-bold mb-2 text-white sm:text-2xl">Commercial</h3>
-      <p class="text-sm text-white">Efficient commercial spaces designed to boost productivity.</p>
+  <div class="col-span-full flex justify-center">
+    <!-- Commercial (Last Item Centered) -->
+    <div class="relative group overflow-hidden rounded-lg shadow-lg hover:shadow-lg hover:shadow-[#cd5225]">
+      <img src="./assets/servicePage/Commercial.jpeg" alt="Commercial" 
+           class="w-full h-[300px] object-cover transform group-hover:scale-110 transition duration-500 ease-in-out">
+      <div class="absolute inset-0 bg-black bg-opacity-60 opacity-0 group-hover:opacity-100 flex flex-col justify-center items-center text-white transition duration-500 ease-in-out">
+        <h3 class="text-xl font-bold mb-2 text-white sm:text-2xl">Commercial</h3>
+        <p class="text-sm text-white">Efficient commercial spaces designed to boost productivity.</p>
+      </div>
     </div>
   </div>
 </div>
