services container fixed

--- a/index.html
+++ b/index.html
@@ -10493,7 +10493,7 @@ window.addEventListener('scroll', function() {
                   <div class="contact"></div>
                   <div id="endecor" class="et_pb_section et_pb_section_9 et_section_regular">
                     
-                    <h1 class="text-xl sm:text-2xl md:text-4xl md:px-16 font-extrabold text-center text-[#cd5225] pt-5 uppercase tracking-wide">
+                    <h1 class="text-xl sm:text-2xl md:text-4xl md:px-16 font-extrabold text-center text-[#cd5225] pt-5 md:pt-12 uppercase tracking-wide">
                       Bringing Your Vision to Life with a 60-Day Project Delivery Guarantee*
                     </h1>
                     
