services container fixed

--- a/index.html
+++ b/index.html
@@ -10445,7 +10445,7 @@ window.addEventListener('scroll', function() {
                                     Your inspiration, our expertise. Welcome to a world of exceptional design.
                                   </p> -->
                                   <p class="py-5 shadow-2xl bg-[#62626263] " style="padding-bottom: 1.5rem !important;">
-                                    En-décor Interiors believes in Transforming Spaces and Elevating Lives
+                                    En-decor Interiors believes in Transforming Spaces and Elevating Lives
                                   </p>
                                   <p>&nbsp;</p>
                                   <p style="padding-right: 4px; animation: bounce 1s infinite;"
