changes on home page

--- a/index.html
+++ b/index.html
@@ -4013,6 +4013,13 @@
       color: #333;
     }
 
+    @media (min-width:981px) {
+      .et_pb_slide_content {
+        margin-bottom: 15rem !important;
+      }
+      
+    }
+
     .et_pb_slide_content p:last-of-type {
       padding-bottom: 0;
     }
@@ -9856,7 +9863,7 @@
   class="fixed inset-0 hidden items-center justify-center bg-black bg-opacity-50 h-full overflow-scroll"
 >
   <div
-    class="bg-[#E6E6FA] text-black rounded-xl shadow-lg overflow-hidden relative w-[90%] h-[85%] max-w-md"
+    class="bg-[#E6E6FA] text-black rounded-xl shadow-lg overflow-hidden relative w-[90%] h-fit max-w-md"
   >
     <!-- Close Button -->
     <button
@@ -10470,7 +10477,7 @@ window.addEventListener('scroll', function() {
                                     En-decor Interiors believes in Transforming Spaces and Elevating Lives
                                   </p>
                                   <p>&nbsp;</p>
-                                  <p style="padding-right: 4px; animation: bounce 1s infinite;"
+                                  <!-- <p style="padding-right: 4px; animation: bounce 1s infinite;"
                                     class="flex item-center justify-center m-auto">
                                     <a href="#endecor">
                                       <img decoding="async" alt="" width="10" height="10"
@@ -10485,7 +10492,7 @@ window.addEventListener('scroll', function() {
                                           height="10" />
                                         </noscript>
                                       </a>
-                                  </p>
+                                  </p> -->
                                 </div>
                               </div>
                             </div>
@@ -10929,6 +10936,9 @@ keenSliderNext.addEventListener('click', () => keenSlider.next())
  <!-- Happy Clients Section -->
 <section class="py-16 bg-white">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h2 class="md:text-4xl text-xl font-extrabold text-center text-[#cd5225] mb-8 uppercase tracking-wide">
+      Our Core - Values: Quality, Customer - Centric, Integrity.
+    </h2>
     <h2 class="text-3xl font-bold text-center text-orange-600 mb-8">Our Happy Clients</h2>
     <p class="text-center max-w-2xl mx-auto mb-12 text-gray-700">
       We take pride in the relationships we've built with our clients. Here are some of the brands we've had the pleasure to work with.
