contact address updated

--- a/contact.html
+++ b/contact.html
@@ -9870,7 +9870,7 @@ Wherever you are in the world. -->
 
                           <div class="et_pb_text_inner">
                             <p>
-                              <!-- 221, 8TH MAIN ROAD,<br />3RD STAGE, PILLANA GARDEN <br> -->
+                              Regus, Estate Building, Yellappa Garden, Yellappa Chetty Layout, Sivanchetti Gardens, Bengaluru, Karnataka 560042
                               BANGALORE<br />
                               <a class="" href="tel:+919886507416">+919886507416</a>
                             </p>
