--- a/index.html
+++ b/index.html
@@ -9858,75 +9858,83 @@
 
 
 <!-- Modal Popup -->
-<div style="z-index: 999999999999999 !important; overflow: scroll;"
-  id="consultationModal"
-  class="fixed inset-0 hidden items-center justify-center bg-black bg-opacity-50 h-full overflow-scroll"
->
-  <div
-    class="bg-[#E6E6FA] text-black rounded-xl shadow-lg overflow-hidden relative w-[90%] h-fit max-w-md"
-  >
+<!-- Modal Popup -->
+<div id="consultationModal" class="fixed inset-0 hidden  bg-black bg-opacity-50 z-[99999] flex items-center justify-center">
+  <!-- Modal Container -->
+  <div class="bg-white \0 rounded-lg shadow-lg overflow-hidden w-full max-w-3xl mx-4 md:mx-auto">
     <!-- Close Button -->
-    <button
-      id="closeModal"
-      class="absolute top-4 right-4 text-lg font-bold text-black hover:text-red-500"
-    >
-      &times;
-    </button>
+   
+    <div class="flex flex-col  md:flex-row relative">
+      <button id="closeModal" class="absolute top-4 right-4 text-2xl text-gray-500 hover:text-red-500">&times;</button>
+      <!-- Image Section -->
+      <div class="md:block md:w-1/2">
+        <img src="./assets/desk-3.jpg" alt="Desk" class="object-cover w-full h-full">
+      </div>
+      <!-- Form Section -->
+      <div class="w-full my-auto md:w-1/2 p-6">
+        <h2 class="text-xl font-bold text-gray-800 text-center mb-4">Book A Free Consultation</h2>
+   <form class="space-y-6">
+  <!-- Email Field -->
+  <div>
+    <label for="name" class="block text-sm font-medium  mb-2 uppercase tracking-wide">
+      Name
+    </label>
+    <input 
+      type="text" 
+      id="name" 
+      placeholder="John doe" 
+      required
+      style="padding: 8px;"
+      class="w-full  p-2 border border-gray-300 bg-gray-100 text-gray-900 text-sm dark:bg-gray-800 dark:border-gray-600 dark:text-white focus:ring-blue-500 focus:border-blue-500 transition duration-300"
+    />
+  </div>
+  <div>
+    <label for="email" class="block text-sm font-medium  mb-2 uppercase tracking-wide">
+      Email Address
+    </label>
+    <input 
+      type="email" 
+      id="email" 
+      placeholder="name@example.com" 
+      required
+      style="padding: 8px;"
+      class="w-full  p-2 border border-gray-300 bg-gray-100 text-gray-900 text-sm dark:bg-gray-800 dark:border-gray-600 dark:text-white focus:ring-blue-500 focus:border-blue-500 transition duration-300"
+    />
+  </div>
+  <div>
+    <label for="number" class="block text-sm font-medium  mb-2 uppercase tracking-wide">
+Mobile 
+    </label>
+    <input 
+      type="text" 
+      id="number" 
+      placeholder="+910202980" 
+      required
+      style="padding: 8px;"
+      class="w-full  p-2 border border-gray-300 bg-gray-100 text-gray-900 text-sm dark:bg-gray-800 dark:border-gray-600 dark:text-white focus:ring-blue-500 focus:border-blue-500 transition duration-300"
+    />
+  </div>
 
-    <!-- Modal Content -->
-    <div class="p-4 text-center">
-      <!-- Heading -->
-      <h2 class="text-xl font-bold uppercase">
-        Book A Free <span class="text-[#f15a22]">Consultation</span>
-      </h2>
 
-      <!-- Sofa Image -->
-      <img
-        src="./assets/sofaPopup.png"
-        alt="Sofa"
-        class="h-28 mx-auto rounded-lg object-cover mb-2"
-      />
 
-      <!-- Form Fields -->
-      <form class="space-y-4">
-        <!-- Name Input -->
-        <input
-          style="padding: 10px;"
-          type="text"
-          placeholder="Your Name"
-          class="w-full border-2 border-[#f15a22] rounded-full text-center focus:outline-none focus:ring-2 focus:ring-[#f15a22] focus:ring-opacity-50 placeholder-gray-500"
-          required
-        />
 
-        <!-- Phone Number Input -->
-        <input
-          style="padding: 10px;"
-          type="tel"
-          placeholder="Your Phone Number"
-          class="w-full border-2 border-[#f15a22] rounded-full text-center focus:outline-none focus:ring-2 focus:ring-[#f15a22] focus:ring-opacity-50 placeholder-gray-500"
-          required
-        />
 
-        <!-- Email Input -->
-        <input
-          style="padding: 10px;"
-          type="email"
-          placeholder="Your Email"
-          class="w-full border-2 border-[#f15a22] rounded-full text-center focus:outline-none focus:ring-2 focus:ring-[#f15a22] focus:ring-opacity-50 placeholder-gray-500"
-          required
-        />
+  <!-- Submit Button -->
+  <button 
+    type="submit"
+    class="w-full bg-[#800080] text-white font-bold py-3 transition duration-300  focus:ring-4  uppercase tracking-wide"
+  >
+   Book Now
+  </button>
 
-        <!-- Submit Button -->
-        <button
-          type="submit"
-          class="w-full px-6 py-3 bg-[#f15a22] text-white font-bold rounded-full hover:bg-[#e0521e] transition duration-200"
-        >
-          Submit
-        </button>
-      </form>
+
+</form>
+
+      </div>
     </div>
   </div>
 </div>
+
 
 
 
