--- a/About.html
+++ b/About.html
@@ -9871,7 +9871,7 @@
                 <a href="./services.html">Services</a>
               </li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30">
-                <a href="./custom-made-kitchen-interiors.html">Blogs</a>
+                <a href="./blogs.html">Blogs</a>
               </li>
 
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-28">
@@ -9908,7 +9908,7 @@
       <li>
         <a class="text-lg uppercase" href="./services.html">Services</a>
       </li>
-      <li><a class="text-lg uppercase" href="./custom-interior-design-solutions.html">Blogs</a></li>
+      <li><a class="text-lg uppercase" href="./blogs.html">Blogs</a></li>
       <li>
         <a class="text-lg uppercase" href="./projects.html">Projects</a>
       </li>
@@ -10971,7 +10971,7 @@
                         <a style="color: #be5933 !important;" href="./services.html">SERVICES</a>
 
                         <a style="color: #be5933 !important; text-transform: uppercase !important;"
-                          href="./custom-interior-design-solutions.html">BLOGS</a>
+                          href="./blogs.html">BLOGS</a>
                         <a style="color: #be5933 !important;" href="./projects.html">PROJECTS</a>
 
 
@@ -11122,7 +11122,7 @@
                       <p>
                         <a href="./About.html">ABOUT</a>
                         <br>
-                        <a href="./custom-made-kitchen-interiors.html">Blogs</a>
+                        <a href="./blogs.html">Blogs</a>
                         <br>
                         <a href="./contact.html">CONTACT</a>
                       </p>
