--- a/bespoke-interior-solutions-bangalore.html
+++ b/bespoke-interior-solutions-bangalore.html
@@ -330,14 +330,14 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
     <!-- This site is optimized with the Yoast SEO plugin v21.2 - https://yoast.com/wordpress/plugins/seo/ -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Best Interior Design Solutions | Custom Furniture in Bangalore</title>
-        <meta name="description"
-            content="Discover bespoke furniture solutions in Bangalore. Transform homes, offices, and hospitality spaces with tailored designs blending style and functionality.">
-    
-    
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Best Interior Design Solutions | Custom Furniture in Bangalore</title>
+    <meta name="description"
+        content="Discover bespoke furniture solutions in Bangalore. Transform homes, offices, and hospitality spaces with tailored designs blending style and functionality.">
+
+
 
     <!-- <link rel="canonical" href="https://www.bmaarchitects.com/projects/" /> -->
     <meta property="og:type" content="article" />
@@ -9543,7 +9543,7 @@
                             </li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30">
                                 <a href="./services.html">Services</a>
-                                <a href="./custom-made-kitchen-interiors.html">Blogs</a>
+                                <a href="./blogs.html">Blogs</a>
                             </li>
 
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-28">
@@ -9579,8 +9579,7 @@
                 <a class="text-lg uppercase" href="./services.html">Services</a>
             </li>
             <li>
-                <a class="text-[#cd5225] font-bold text-lg uppercase"
-                    href="./custom-interior-design-solutions.html">Blogs</a>
+                <a class="text-[#cd5225] font-bold text-lg uppercase" href="./blogs.html">Blogs</a>
             </li>
             <li>
                 <a class="text-lg uppercase" href="./projects.html">Projects</a>
@@ -9968,7 +9967,7 @@
                         --accent: #0984e3;
                         --bg-light: #f5f6fa;
                         --spacing-xl: 120px;
-                        --spacing-lg: 80px;
+                        --spacing-lg: 35px;
                         --spacing-md: 40px;
                         --spacing-sm: 20px;
                     }
@@ -10277,85 +10276,88 @@
 
                 <style>
                     .blog-container {
-    max-width: 900px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
+                        max-width: 900px;
+                        margin: 20px auto;
+                        padding: 20px;
+                        background-color: #ffffff;
+                        border-radius: 8px;
+                        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                    }
 
-/* Title styling */
-.blog-title {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #333;
-    text-align: center;
-}
+                    /* Title styling */
+                    .blog-title {
+                        font-size: 2rem;
+                        margin-bottom: 20px;
+                        color: #333;
+                        text-align: center;
+                    }
 
-/* Blog links container */
-.blog-links {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
+                    /* Blog links container */
+                    .blog-links {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+                    }
 
-/* Individual link styling */
-.blog-link {
-    display: block;
-    padding: 12px;
-    background-color: #007BFF;
-    color: white;
-    font-size: 1.1rem;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
+                    /* Individual link styling */
+                    .blog-link {
+                        display: block;
+                        padding: 12px;
+                        background-color: #007BFF;
+                        color: white;
+                        font-size: 1.1rem;
+                        text-align: center;
+                        text-decoration: none;
+                        border-radius: 5px;
+                        transition: background-color 0.3s ease;
+                    }
 
-/* Link hover effect */
-.blog-link:hover {
-    background-color: #0056b3;
-}
+                    /* Link hover effect */
+                    .blog-link:hover {
+                        background-color: #0056b3;
+                    }
 
-/* Responsive styling */
-@media screen and (max-width: 768px) {
-    .blog-container {
-        padding: 15px;
-        margin: 10px;
-    }
+                    /* Responsive styling */
+                    @media screen and (max-width: 768px) {
+                        .blog-container {
+                            padding: 15px;
+                            margin: 10px;
+                        }
 
-    .blog-title {
-        font-size: 1.5rem;
-    }
+                        .blog-title {
+                            font-size: 1.5rem;
+                        }
 
-    .blog-link {
-        font-size: 1rem;
-        padding: 10px;
-    }
-}
+                        .blog-link {
+                            font-size: 1rem;
+                            padding: 10px;
+                        }
+                    }
 
-@media screen and (max-width: 480px) {
-    .blog-container {
-        padding: 10px;
-    }
+                    @media screen and (max-width: 480px) {
+                        .blog-container {
+                            padding: 10px;
+                        }
 
-    .blog-title {
-        font-size: 1.25rem;
-    }
+                        .blog-title {
+                            font-size: 1.25rem;
+                        }
 
-    .blog-link {
-        font-size: 0.9rem;
-        padding: 8px;
-    }
-}
+                        .blog-link {
+                            font-size: 0.9rem;
+                            padding: 8px;
+                        }
+                    }
                 </style>
                 <div class="blog-container">
                     <h2 class="blog-title">More Blogs</h2>
                     <div class="blog-links">
-                        <a href="./bespoke-interior-solutions-bangalore.html" class="blog-link">Best Interior Design Solutions | Custom Furniture in Bangalore</a>
-                        <a href="./custom-interior-design-solutions.html" class="blog-link">Expert Interior Design for Home & Office | En-decor Interiors</a>
-                        <a href="./custom-made-kitchen-interiors.html" class="blog-link">Custom Furniture Solutions for Kitchens in Bangalore</a>
+                        <a href="./bespoke-interior-solutions-bangalore.html" class="blog-link">Best Interior Design
+                            Solutions | Custom Furniture in Bangalore</a>
+                        <a href="./custom-interior-design-solutions.html" class="blog-link">Expert Interior Design for
+                            Home & Office | En-decor Interiors</a>
+                        <a href="./custom-made-kitchen-interiors.html" class="blog-link">Custom Furniture Solutions for
+                            Kitchens in Bangalore</a>
                     </div>
                 </div>
 
@@ -10396,7 +10398,7 @@
                                                     href="./services.html">SERVICES</a>
 
                                                 <a style="color: #be5933 !important; text-transform: uppercase !important;"
-                                                    href="./custom-interior-design-solutions.html">Blogs</a>
+                                                    href="./blogs.html">Blogs</a>
                                                 <a style="color: #be5933 !important;"
                                                     href="./projects.html">PROJECTS</a>
 
@@ -10557,7 +10559,7 @@
                                             <p>
                                                 <a href="./About.html">ABOUT</a>
                                                 <br>
-                                                <a href="./custom-made-kitchen-interiors.html">Blogs</a>
+                                                <a href="./blogs.html">Blogs</a>
                                                 <br>
                                                 <a href="./contact.html">CONTACT</a>
                                             </p>
