--- a/index.html
+++ b/index.html
@@ -10026,7 +10026,7 @@
                 <a href="./services.html">Services</a>
               </li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30">
-                <a href="./custom-made-kitchen-interiors.html">Blogs</a>
+                <a href="./blogs.html">Blogs</a>
               </li>
 
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-28">
@@ -10060,7 +10060,7 @@
       <li> <a class="text-[#cd5225] font-bold text-lg uppercase" href="./index.html">Home</a></li>
       <li> <a class="text-lg uppercase" href="./About.html">About</a></li>
       <li> <a class="text-lg uppercase" href="./services.html">Services</a></li>
-      <li> <a class="text-lg uppercase" href="./custom-interior-design-solutions.html">Blogs</a></li>
+      <li> <a class="text-lg uppercase" href="./blogs.html">Blogs</a></li>
       <li> <a class="text-lg uppercase" href="./projects.html">Projects</a></li>
       <li> <a class="text-lg uppercase" href="./contact.html">Contact</a></li>
     </ul>
@@ -11508,8 +11508,7 @@ That's You...
                                           <a style="color: #be5933 !important;" href="About.html">ABOUT</a>
                                           <a style="color: #be5933 !important;" href="./services.html">SERVICES</a>
 
-                                          <a style="color: #be5933 !important;"
-                                            href="./custom-interior-design-solutions.html">BLOGS</a>
+                                          <a style="color: #be5933 !important;" href="./blogs.html">Blogs</a>
                                           <a style="color: #be5933 !important;" href="./projects.html">PROJECTS</a>
 
 
@@ -11667,7 +11666,7 @@ That's You...
                                         <p>
                                           <a href="./About.html">ABOUT</a>
                                           <br>
-                                          <a href="./custom-made-kitchen-interiors.html">Blogs</a>
+                                          <a href="./blogs.html">Blogs</a>
                                           <br>
                                           <a href="./contact.html">CONTACT</a>
                                         </p>
