--- a/projects.html
+++ b/projects.html
@@ -9537,7 +9537,7 @@
                 <a href="./services.html">Services</a>
               </li>
               <li>
-                <a class="text-lg uppercase" href="./custom-interior-design-solutions.html">Blogs</a>
+                <a class="text-lg uppercase" href="./blogs.html">Blogs</a>
               </li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-28">
                 <a href="./projects.html">Projects</a>
@@ -9572,7 +9572,7 @@
         <a class="text-lg uppercase" href="./services.html">Services</a>
       </li>
       <li>
-        <a class="text-lg uppercase" href="./custom-interior-design-solutions.html">Blogs</a>
+        <a class="text-lg uppercase" href="./blogs.html">Blogs</a>
       </li>
       <li>
         <a class="text-[#cd5225] font-bold text-lg uppercase" href="./projects.html">Projects</a>
@@ -10620,7 +10620,7 @@
                         <a style="color: #be5933 !important;" href="./services.html">SERVICES</a>
 
                         <a style="color: #be5933 !important; text-transform: uppercase !important;"
-                          href="./custom-interior-design-solutions.html">Blogs</a>
+                          href="./blogs.html">BLOGS</a>
                         <a style="color: #be5933 !important;" href="./projects.html">PROJECTS</a>
 
 
@@ -10771,7 +10771,7 @@
                       <p>
                         <a href="./About.html">ABOUT</a>
                         <br>
-                        <a href="./custom-made-kitchen-interiors.html">Blogs</a>
+                        <a href="./blogs.html">Blogs</a>
                         <br>
                         <a href="./contact.html">CONTACT</a>
                       </p>
